# SmartHome

./: CMakeLists.txt  Main.qml  README.md  devicecontroller.cpp  devicecontroller.h  deviceobserver.cpp  deviceobserver.h  main.cpp
